sql/item.cc
@@ -938,9 +938,12 @@ int Item::save_in_field_no_warnings(Field *field, bool no_conversions)
   int res;
   THD *thd= field->table->in_use;
   enum_check_fields tmp= thd->count_cuted_fields;
+  ulong sql_mode= thd->variables.sql_mode;
+  thd->variables.sql_mode&= ~(MODE_NO_ZERO_IN_DATE | MODE_NO_ZERO_DATE);
   thd->count_cuted_fields= CHECK_FIELD_IGNORE;
   res= save_in_field(field, no_conversions);
   thd->count_cuted_fields= tmp;
+  thd->variables.sql_mode= sql_mode;
   return res;
 }
 
